Revise personal text in index.html
Updated personal introduction and professional focus.

--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
 
                 <!-- Personal Text -->
                 <p class="text-gray-400 max-w-2xl text-sm sm:text-base leading-relaxed border-l-4 border-green-500/30 pl-4">
-                   Hi, I'm Alejandro. This isn't your standard boring PDF. I built this CLI because, well, efficiency is my thing. 
-                   Whether you're here to check my Data Science stats, my business background, or just to verify I can actually code—you're in the right place.
+                   Hi, I'm Alejandro. This isn't your standard CV, charts speak louder than PDFs.
                    <br /><br />
-                   I bridge the gap between financial operations and advanced analytics. Basically, I turn chaos into insights and EBITDA.
-                   Type a command or click below to explore.
+                   I operate at the intersection of Statistics and Data Science. My focus is developing predictive algorithms and optimizing data to solve business problems objectively.
+                   <br /><br />
+                   I also translate that complex math into actionable decisions via Power BI dashboards. Type a command or click below to explore.
                 </p>
             </div>
 
