Revise profile role and update personal description
Updated profile role and details in CV_DATA. Enhanced personal description with new insights and experiences.

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         const CV_DATA = {
             profile: {
                 name: "Alejandro Treny Ortega",
-                role: "Data Analyst & Operational Excellence Specialist",
+                role: "Statistician and Data Scientist",
                 location: "Madrid, Spain",
                 contact: {
                     email: "alejandrotreny100@gmail.com",
@@ -229,7 +229,7 @@
                 { name: "Podcast - Un Poco Absurdo", org: "Personal Project", period: "Jun 2023 – Sept 2023", details: "Created and hosted a podcast on technology, science, and philosophy. Achieved 100+ listeners/episode and a 5-star rating, leveraging AI for audio editing." },
                 { name: "Third Generation Learning", org: "Erasmus+ (Lithuania)", period: "May 2023", details: "Pioneering traineeship programme integrating AI tools (ChatGPT, Claude, Copilot) into the design of modern educational activities and curricula." },
                 { name: "Active Citizenship Exchange", org: "Erasmus+ (Bulgaria)", period: "May 2023", details: "International project focused on democratic participation and social inclusion, involving collaboration with participants from 10 different nationalities." },
-                { name: "Hackathon Flash Session 2", org: "Startup Challenge", period: "Nov 2022", details: "Co-founded a startup concept in 3 days: An app to gamify recycling behavior by offering rewards redeemable at local businesses." },
+                { name: "Hackathon Flash Session 2", org: "Recycling Innovation", period: "Nov 2022", details: "Co-founded a startup concept in 3 days: An app to gamify recycling behavior by offering rewards redeemable at local businesses." },
                 { name: "Hackathon Flash Session 1", org: "Urban Innovation", period: "Apr 2022", details: "Developed a sustainable business model to transform empty city rooftops into community urban gardens to promote local produce." },
                 { name: "Frulogy - Business", org: "Founder", period: "Dec 2020 – Sept 2021", details: "Founded a D2C platform connecting organic fruit producers with European consumers. Achieved a 150% margin increase for producers and a 4.5 Trustpilot rating." }
             ],
@@ -357,8 +357,11 @@
                                 </div>
                              </div>
                              <p class="text-gray-300 max-w-2xl">
-                               Data Analyst with a background in Economics and Business, currently mastering Statistics for Data Science. 
-                               I bridge the gap between financial operations and advanced data analytics.
+                               I’m a Málaga native with a strong French heritage. Mathematics was always my passion, but just before university, a weekly habit of reading The Economist convinced me to switch to Economics—I wanted to see that logic applied to the real world. That path naturally evolved into Data Science, where I’m now obsessing over the latest Machine Learning algorithms and loving every bit of it.
+                               <br /><br />
+                               Outside the terminal, my philosophy is to accumulate as many experiences as possible so I can look back on my life with zero regrets. That mindset has taken me to over 40 countries and keeps me exploring. I’m a former competitor who still finds time for Padel and Pickleball, though I’m just as happy staying in to solve complex puzzles or hunt for the best Asian food in town.
+                               <br /><br />
+                               I’m also a massive geek for Sci-Fi (Asimov, Pratchett, and The Hitchhiker's Guide are essentials) and Astronomy—I study the stars for fun and love spending nights with my telescope. On the flip side, I stay grounded through horticulture. Coming from a farming family, I’ve always kept my own vegetable garden, even trying my hand at cross-breeding plants—sort of like Mendel, just without the genius intellect.
                              </p>
                         </div>`;
                     break;
