Fix syntax error in skills section of index.html

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             skills: {
                 languages: ["Spanish (Native)", "French (Native)", "English (C1 Cambridge - Full Professional Proficiency)"],
                 tech: ["R", "Python", "SQL", "MATLAB", "Power BI", "Microsoft Office Suite", "Power Query", "Tableau", "Git"],
-                : ["Data Analysis", "Demand Forecasting", "Machine Learning", "Process Automation", "Business Intelligence", "Operational Excellence"]
+                skills: ["Data Analysis", "Demand Forecasting", "Machine Learning", "Process Automation", "Business Intelligence", "Operational Excellence"]
             },
             experience: [
                 {
