Update personal biography in index.html
Revised personal description for clarity and flow.

--- a/index.html
+++ b/index.html
@@ -357,11 +357,11 @@
                                 </div>
                              </div>
                              <p class="text-gray-300 max-w-2xl">
-                               I’m a Málaga native with a strong French heritage. Mathematics was always my passion, but just before university, a weekly habit of reading The Economist convinced me to switch to Economics—I wanted to see that logic applied to the real world. That path naturally evolved into Data Science, where I’m now obsessing over the latest Machine Learning algorithms and loving every bit of it.
+                               I was born in Málaga but raised with a strong French family background. Mathematics was always my passion, but just before university I switched to Economics. I was inspired by reading certain financial and analytical publications that showed me the potential for applying mathematical logic to solve real-world issues. That path naturally evolved into Data Science, where I’m now obsessing over the latest Machine Learning algorithms and loving every bit of it.
                                <br /><br />
                                Outside the terminal, my philosophy is to accumulate as many experiences as possible so I can look back on my life with zero regrets. That mindset has taken me to over 40 countries and keeps me exploring. I’m a former competitor who still finds time for Padel and Pickleball, though I’m just as happy staying in to solve complex puzzles or hunt for the best Asian food in town.
                                <br /><br />
-                               I’m also a massive geek for Sci-Fi (Asimov, Pratchett, and The Hitchhiker's Guide are essentials) and Astronomy—I study the stars for fun and love spending nights with my telescope. On the flip side, I stay grounded through horticulture. Coming from a farming family, I’ve always kept my own vegetable garden, even trying my hand at cross-breeding plants—sort of like Mendel, just without the genius intellect.
+                               I’m also a massive geek for Sci-Fi (Asimov, Pratchett, and The Hitchhiker's Guide are essentials) and Astronomy. I study the stars for fun and love spending nights with my telescope. On the flip side, I stay grounded through horticulture. Coming from a farming family, I’ve always kept my own vegetable garden, even trying my hand at cross-breeding plants—sort of like Mendel, just without the genius intellect.
                              </p>
                         </div>`;
                     break;
