--- a/index.html
+++ b/index.html
@@ -180,15 +180,21 @@
             },
             experience: [
                 {
+                    company: "Siemens Energy",
+                    role: "Data Scientist",
+                    period: "Nov 2025 - Present",
+                    desc: "(Master's Thesis Project)",
+                    achievements: [
+                        "I am currently leading the end-to-end development of a predictive framework for global monthly cash flow forecasting at a firm with €32B+ in revenue. My technical core involves benchmarking high-dimensional Python architectures—specifically Lasso, Ridge, Generalized Additive Models (GAMs), and XGBoost—to optimize the bias-variance tradeoff in financial time-series. I implement automated feature engineering pipelines to synthesize complex financial indicators into robust predictors, significantly enhancing the precision of critical KPI estimations. Beyond modeling, I am architecting the migration of these predictive workflows to the corporate Snowflake and Azure ecosystem to ensure scalable inference. Finally, I deploy these ML insights via interactive Power BI dashboards to drive executive liquidity management and decision-making."
+                    ]
+                },
+                {
                     company: "Tropical Millenium",
-                    role: "Data Analyst - Operational Excellence",
+                    role: "Data Analyst - Operations",
                     period: "Nov 2024 - Jun 2025",
                     desc: "Leading European distributor of tropical fruit (>€44M turnover).",
                     achievements: [
-                        "Led modernization of core business processes, turning raw data into actionable insights.",
-                        "Implemented demand forecasting models for avocados & mangoes, driving a 7% monthly EBITDA growth.",
-                        "Managed a €470k operational improvement fund directly with the CEO to optimize supply chain efficiency.",
-                        "Developed comprehensive Power BI dashboards for executive decision-making and real-time KPI tracking."
+                        "Following the firm's strategic acquisition by Baika, I spearheaded the quantitative transformation of a distributor handling over 12 million kg of tropical fruit annually. I conducted in-depth statistical exploration to build econometric price prediction models for avocados and mangoes, accounting for seasonal supply-demand fluctuations. I pioneered the application of Linear Programming (LP) to optimize warehouse shift scheduling and implemented rigorous inventory control frameworks to enhance supply chain efficiency. These interventions were a primary driver of a sustained 7% average monthly EBITDA growth. Furthermore, I collaborated directly with the CEO to oversee a €470k operational improvement fund, using Power BI to quantify the financial ROI of strategic process optimizations."
                     ]
                 },
                 {
@@ -197,9 +203,7 @@
                     period: "Sep 2024 - Jan 2025",
                     desc: "Consultancy for ING regarding financial irregularities investigation.",
                     achievements: [
-                        "Investigated complex corporate account irregularities valued up to €90M, ensuring regulatory compliance.",
-                        "Designed and deployed an automated Power Query workflow that replaced manual Excel checks.",
-                        "Doubled the team's daily case throughput via automation, significantly reducing processing time and errors."
+                        "During my internship at EY, I focused on ensuring data integrity and regulatory compliance by investigating complex corporate account irregularities valued at up to €90M. I identified operational bottlenecks in audit procedures and addressed them by designing and deploying an automated Power Query workflow that replaced manual Excel checks. This technical intervention doubled the team's daily case throughput, significantly reducing processing time and human error. My work provided the foundation for more transparent internal audits and substantially accelerated the delivery of data-driven reporting for senior consultants."
                     ]
                 }
             ],
