--- a/index.html
+++ b/index.html
@@ -185,7 +185,11 @@
                     period: "Nov 2025 - Present",
                     desc: "(Master's Thesis Project)",
                     achievements: [
-                        "I am currently leading the end-to-end development of a predictive framework for global monthly cash flow forecasting at a firm with €32B+ in revenue. My technical core involves benchmarking high-dimensional Python architectures—specifically Lasso, Ridge, Generalized Additive Models (GAMs), and XGBoost—to optimize the bias-variance tradeoff in financial time-series. I implement automated feature engineering pipelines to synthesize complex financial indicators into robust predictors, significantly enhancing the precision of critical KPI estimations. Beyond modeling, I am architecting the migration of these predictive workflows to the corporate Snowflake and Azure ecosystem to ensure scalable inference. Finally, I deploy these ML insights via interactive Power BI dashboards to drive executive liquidity management and decision-making."
+                        "Developing an end-to-end predictive framework for global monthly cash flow forecasting within a firm generating €32B+ in revenue.",
+                        "Benchmarking high-dimensional Python architectures, including Lasso, Ridge, GAMs, and XGBoost, to optimize predictive accuracy and the bias-variance tradeoff.",
+                        "Automating feature engineering pipelines to synthesize complex financial indicators, significantly increasing the precision of critical KPI estimations.",
+                        "Architecting the migration of predictive workflows to Snowflake and Azure ecosystems to ensure scalable inference and data governance.",
+                        "Deploying ML insights via interactive Power BI dashboards to drive executive liquidity management and real-time decision-making."
                     ]
                 },
                 {
@@ -194,7 +198,11 @@
                     period: "Nov 2024 - Jun 2025",
                     desc: "Leading European distributor of tropical fruit (>€44M turnover).",
                     achievements: [
-                        "Following the firm's strategic acquisition by Baika, I spearheaded the quantitative transformation of a distributor handling over 12 million kg of tropical fruit annually. I conducted in-depth statistical exploration to build econometric price prediction models for avocados and mangoes, accounting for seasonal supply-demand fluctuations. I pioneered the application of Linear Programming (LP) to optimize warehouse shift scheduling and implemented rigorous inventory control frameworks to enhance supply chain efficiency. These interventions were a primary driver of a sustained 7% average monthly EBITDA growth. Furthermore, I collaborated directly with the CEO to oversee a €470k operational improvement fund, using Power BI to quantify the financial ROI of strategic process optimizations."
+                        "Spearheaded the quantitative transformation of a distributor handling 12M+ kg of fruit annually following its strategic acquisition by Baika.",
+                        "Engineered econometric price prediction models for avocados and mangoes, utilizing historical data to account for seasonal supply-demand fluctuations.",
+                        "Pioneered the use of Linear Programming (LP) to optimize warehouse shift scheduling and implemented rigorous inventory control frameworks.",
+                        "Achieved a sustained 7% average monthly EBITDA growth through the implementation of these predictive and optimization models.",
+                        "Co-managed a €470k operational improvement fund alongside the CEO, using Power BI to quantify and track the financial ROI of strategic interventions."
                     ]
                 },
                 {
@@ -203,7 +211,10 @@
                     period: "Sep 2024 - Jan 2025",
                     desc: "Consultancy for ING regarding financial irregularities investigation.",
                     achievements: [
-                        "During my internship at EY, I focused on ensuring data integrity and regulatory compliance by investigating complex corporate account irregularities valued at up to €90M. I identified operational bottlenecks in audit procedures and addressed them by designing and deploying an automated Power Query workflow that replaced manual Excel checks. This technical intervention doubled the team's daily case throughput, significantly reducing processing time and human error. My work provided the foundation for more transparent internal audits and substantially accelerated the delivery of data-driven reporting for senior consultants."
+                        "Investigated complex corporate account irregularities valued at up to €90M, ensuring strict regulatory compliance and data integrity.",
+                        "Designed and deployed an automated Power Query workflow that successfully replaced manual Excel-based checks.",
+                        "Doubled the team’s daily case throughput via technical automation, significantly reducing processing time and mitigating human error.",
+                        "Automated audit reporting workflows, eliminating manual data preparation for senior consultants."
                     ]
                 }
             ],
