--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     company: "Siemens Energy",
                     role: "Data Scientist",
                     period: "Nov 2025 - Present",
-                    desc: "(Master's Thesis Project)",
+                    desc: "Master's Thesis Project",
                     achievements: [
                         "Developing an end-to-end predictive framework for global monthly cash flow forecasting within a firm generating €32B+ in revenue.",
                         "Benchmarking high-dimensional Python architectures, including Lasso, Ridge, GAMs, and XGBoost, to optimize predictive accuracy and the bias-variance tradeoff.",
